--- a/Website/sftp-config.json
+++ b/Website/sftp-config.json
@@ -14,12 +14,12 @@
     "confirm_sync": true,
     "confirm_overwrite_newer": false,
     
-    "host": "kobe.centralus.cloudapp.azure.com",
-    "user": "kobe",
-    "password": "Yy18722069967",
+    "host": "gene.rnet.missouri.edu",
+    "user": "ylskt3",
+    //"password": "",
     //"port": "22",
     
-    "remote_path": "/home/kobe/kobe.centralus.cloudapp.azure.com/public_html/muSite",
+    "remote_path": "/storage/www/musite_dev/public_html/newMuSite",
     "ignore_regexes": [
         "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
         "sftp-settings\\.json", "/venv/", "\\.svn/", "\\.hg/", "\\.git/",
